--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,12 @@
 title: Harry Gibson 
 logo: "/images/harry_gibson.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  About Me 
+  Geospatial Data Archive Developer 
   <br><br>
   Some PRojects
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn Profile</a> 
+  <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate></a> (publications list)
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
