Added rice page

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/harry_gibson.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Geospatial Data Archive Developer 
   <br><br>
-  Some PRojects
+  Some Pojects
   <br><br>
   <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn Profile</a> 
   <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate></a> (publications list)
