--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,9 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   Some Pojects
   <br><br>
-  <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn Profile</a> 
+  <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn Profile</a> | 
   <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate></a> (publications list)
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+include: ['_pages']
