--- a/_config.yml
+++ b/_config.yml
@@ -9,5 +9,5 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate</a>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-000000-0 # your Google Analytics tracking ID here
+google_analytics: UA-153224943-1 # your Google Analytics tracking ID here
 include: ['_pages']
