--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Harry Gibson 
-logo: "/images/harry_gibson_circle.jpg?raw=true" # your photo (or logo) here
+logo: "/images/harry_gibson_circle.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <strong>Geospatial Data Archive Developer </strong>
   <br><br>
