--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,8 @@ description: > # your text below (remove <br> elements if you don't need line br
   (profile)
   <br><br>
   <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn Profile</a> | 
-  <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate</a>
+  <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate</a> | 
+  <a href="https://map.ox.ac.uk/staff/harrygibson/" target="_blank">Work</a>
   
 theme: jekyll-theme-minimal
 google_analytics: UA-153224943-1 # your Google Analytics tracking ID here
