--- a/_config.yml
+++ b/_config.yml
@@ -3,9 +3,13 @@ logo: "/images/harry_gibson_circle.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <strong>Geospatial Data Archive Developer </strong>
   <br><br>
-  (profile)
+  I'm an experienced geospatial software developer and data scientist.
+  I currently work in the <a href="https://map.ox.ac.uk/" target="_blank">Malaria Atlas Project</a>
+  at the University of Oxford's 
+  <a href="https://www.bdi.ox.ac.uk/" target="_blank">Big Data Institute</a>. 
+  [More](_pages/about)
   <br><br>
-  <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn Profile</a> | 
+  <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn</a> | 
   <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate</a> | 
   <a href="https://map.ox.ac.uk/staff/harrygibson/" target="_blank">Work</a>
   
