--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   I currently work in the <a href="https://map.ox.ac.uk/" target="_blank">Malaria Atlas Project</a>
   at the University of Oxford's 
   <a href="https://www.bdi.ox.ac.uk/" target="_blank">Big Data Institute</a>. 
-  [More](_pages/about)
+  <a href="/pages/about">More</a>
   <br><br>
   <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn</a> | 
   <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate</a> | 
