--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Harry Gibson 
+title: Dr Harry Gibson 
 logo: "/images/harry_gibson_circle.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <strong>Geospatial Data Archive Developer </strong>
