--- a/_config.yml
+++ b/_config.yml
@@ -1,17 +1,17 @@
 title: Dr Harry Gibson 
 logo: "/images/harry_gibson_circle.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  <strong>Geospatial Data Archive Developer </strong>
+  <strong>Geospatial Data Scientist</strong>
   <br><br>
   I'm an experienced geospatial software developer and data scientist.
-  I currently work in the <a href="https://map.ox.ac.uk/" target="_blank">Malaria Atlas Project</a>
-  at the University of Oxford's 
-  <a href="https://www.bdi.ox.ac.uk/" target="_blank">Big Data Institute</a>. 
+  I currently work in the <a href="https://www.oxfordmartin.ox.ac.uk/" target="_blank">Oxford Martin School</a> 
+  research programme on <a href="https://www.oxfordmartin.ox.ac.uk/informal-cities/" target="_blank">Informal Cities</a>.. 
   <br><br><a href="/pages/about">More About Me</a> | <a href="/index">Portfolio</a>
   <br><br>
   <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn</a> | 
   <a href="https://www.researchgate.net/profile/Harry_Gibson2" target="_blank">ResearchGate</a> | 
-  <a href="https://map.ox.ac.uk/staff/harrygibson/" target="_blank">Work</a>
+  <a href="https://scholar.google.com/citations?user=YuyY4AIAAAAJ&hl=en" target="_blank">Google Scholar</a>
+  <!--<a href="https://map.ox.ac.uk/staff/harrygibson/" target="_blank">Work</a>-->
   
 theme: jekyll-theme-minimal
 google_analytics: UA-153224943-1 # your Google Analytics tracking ID here
