--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   I'm an experienced geospatial software developer and data scientist.
   I currently work in the <a href="https://www.oxfordmartin.ox.ac.uk/" target="_blank">Oxford Martin School</a> 
-  research programme on <a href="https://www.oxfordmartin.ox.ac.uk/informal-cities/" target="_blank">Informal Cities</a>.. 
+  research programme on <a href="https://www.oxfordmartin.ox.ac.uk/informal-cities/" target="_blank">Informal Cities</a>. 
   <br><br><a href="/pages/about">More About Me</a> | <a href="/index">Portfolio</a>
   <br><br>
   <a href="https://www.linkedin.com/in/harry-gibson-b1854924/" target="_blank">LinkedIn</a> | 
